Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,8 @@
    },
    "outputs": [],
    "source": [
-    "s\"art vandelay\" # \"ART VANDELAY\""
+    "name = \"art vandelay\" # \"ART VANDELAY\"\n",
+    "name."
    ]
   },
   {
