--- a/index.ipynb
+++ b/index.ipynb
@@ -80,14 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Art Vandelay'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "name = \"art vandelay\" # \"ART VANDELAY\"\n",
-    "name."
+    "name.title()"
    ]
   },
   {
