--- a/index.ipynb
+++ b/index.ipynb
@@ -80,23 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Art Vandelay'"
+       "'ART VANDELAY'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name = \"art vandelay\" # \"ART VANDELAY\"\n",
-    "name.u()"
+    "name.upper()"
    ]
   },
   {
