--- a/index.ipynb
+++ b/index.ipynb
@@ -252,7 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "emai\"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
