--- a/index.ipynb
+++ b/index.ipynb
@@ -246,13 +246,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "emai\"art.vandelay@vandelay.co\" # False"
+    "email = \"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
