--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "email = \"art.vandelay@vandelay.co\" # False\n"
+    "email = \"art.vandelay@vandelay.co\" # False\n",
+    "email.endwith('')"
    ]
   },
   {
