--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "web = 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
