--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,8 @@
    },
    "outputs": [],
    "source": [
-    "web = 'vandelay.com' # 'www.vandelay.com'"
+    "web = 'vandelay.com' # 'www.vandelay.com'\n",
+    "web = 'www'"
    ]
   },
   {
