--- a/index.ipynb
+++ b/index.ipynb
@@ -274,15 +274,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "web = 'vandelay.com' # 'www.vandelay.com'\n",
-    "web = 'www'"
+    "web = 'www.'+web\n",
+    "web"
    ]
   },
   {
