--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,8 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553335"
+    "phone = \"7285553334\" # 7285553335\n",
+    "phone"
    ]
   },
   {
