Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,8 +318,8 @@
    },
    "outputs": [],
    "source": [
-    "phone = \"7285553334\" # 7285553335\n",
-    "phon"
+    "phone_1 = \"7285553334\" # 7285553335\n",
+    "phone_2 = int(pho)"
    ]
   },
   {
