--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "phone_1 = \"7285553334\" # 7285553335\n",
-    "phone_2 = int(pho)"
+    "phone_2 = int(phone)"
    ]
   },
   {
