Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,24 +312,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'phone' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-5000ed8e8f2e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mphone_1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"7285553334\"\u001b[0m \u001b[0;31m# 7285553335\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mphone_2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphone\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'phone' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "phone_1 = \"7285553334\" # 7285553335\n",
-    "phone_2 = int(phone) + 1"
+    "phone_2 = int(phone_1) + 1\n",
+    "phont"
    ]
   },
   {
