Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -312,13 +312,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7285553335"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "phone_1 = \"7285553334\" # 7285553335\n",
-    "phone_2 = int(phone_1) + 1\n",
-    "phont"
+    "phone_2 = str(int(phone_1) + 1\n",
+    "phone_2"
    ]
   },
   {
