--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -321,14 +321,14 @@
        "7285553335"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "phone_1 = \"7285553334\" # 7285553335\n",
-    "phone_2 = str(int(phone_1) + 1\n",
+    "phone_2 = int(phone_1) + 1\n",
     "phone_2"
    ]
   },
