Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -341,7 +341,7 @@
    "outputs": [],
    "source": [
     "\"7285553334\" # 7285553336\n",
-    "phone_3 = int(phon)"
+    "phone_3 = "
    ]
   },
   {
