Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -334,12 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\"7285553334\" # 7285553336\n",
-    "phone_3 = int(phone_1)+2"
+    "phone_3 = int(phon)"
    ]
   },
   {
